# mirava-tui

./: .gitignore  README.md  mirava_full_json.json  pyproject.toml
.github/workflows/: build-binaries.yml
mirava/: __init__.py  cli.py  cli.py.new  mirrors.py  models.py  utils.py
mirava/registry/: base.py  docker.py  factory.py  npm.py  pypi.py
mirava/registry/os/: alpine.py  apt.py  generic.py  pacman.py  yum.py
scripts/: build_nuitka.py  build_nuitka.sh
